[package]
name = "lmec-delta0"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "lmec_delta0_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [] }
tauri-plugin-shell = "2.0.0-beta"
tauri-plugin-stronghold = "2.0.0-beta"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hmac-sha256 = "1.1.7"
hex = "0.4.3"
rust-argon2 = "2.1.0"
